// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/radio/RadioButtonField should render a basic RadioButton when no field property is provided 1`] = `
<RadioButton
  label="Pistachio"
  value="pistachio"
/>
`;

exports[`components/radio/RadioButtonField should render isSelected=false with value=chocolate 1`] = `
<RadioButton
  isSelected={false}
  label="Red Velvet"
  name="redVelvet"
  onBlur={[Function]}
  onChange={[Function]}
  value="redVelvet"
/>
`;

exports[`components/radio/RadioButtonField should render isSelected=false with value=null 1`] = `
<RadioButton
  isSelected={false}
  label="Red Velvet"
  name="redVelvet"
  onBlur={[Function]}
  onChange={[Function]}
  value="redVelvet"
/>
`;

exports[`components/radio/RadioButtonField should render isSelected=false with value=pumpkin 1`] = `
<RadioButton
  isSelected={false}
  label="Red Velvet"
  name="redVelvet"
  onBlur={[Function]}
  onChange={[Function]}
  value="redVelvet"
/>
`;

exports[`components/radio/RadioButtonField should render isSelected=false with value=undefined 1`] = `
<RadioButton
  isSelected={false}
  label="Red Velvet"
  name="redVelvet"
  onBlur={[Function]}
  onChange={[Function]}
  value="redVelvet"
/>
`;

exports[`components/radio/RadioButtonField should render isSelected=true with value=redVelvet 1`] = `
<RadioButton
  isSelected={true}
  label="Red Velvet"
  name="redVelvet"
  onBlur={[Function]}
  onChange={[Function]}
  value="redVelvet"
/>
`;
